// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Number should render 1`] = `
.emotion-0 {
  font-family: Inconsolata,monospace;
  border-radius: 2px;
  border: 1px solid;
  background: transparent;
  color: #addb67;
}

<input
  className="emotion-0"
  max="100"
  min="1"
  type="number"
/>
`;

exports[`Input Text should render 1`] = `
.emotion-0 {
  font-family: Inconsolata,monospace;
  border-radius: 2px;
  border: 1px solid;
  background: transparent;
  color: #addb67;
}

<input
  className="emotion-0"
  type="text"
/>
`;
